[gd_scene load_steps=4 format=3 uid="uid://csuy2p15xks70"]

[ext_resource type="Script" path="res://Exit_Portal_Basic.gd" id="1_bn614"]
[ext_resource type="Texture2D" uid="uid://by8xkr4qgpqd1" path="res://Assets_And_Placeholders/MapTileset.png" id="2_o1ys2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drht7"]
size = Vector2(18.5, 34.0372)

[node name="Exit_Portal_Basic" type="StaticBody2D"]
z_index = 10
position = Vector2(2, -0.999985)
scale = Vector2(1, 0.961039)
collision_layer = 8
collision_mask = 32
script = ExtResource("1_bn614")

[node name="Player_Detector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detector"]
position = Vector2(-1.25, -7.9544)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_drht7")

[node name="Rock_Detector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock_Detector"]
position = Vector2(-1.5, -6.98313)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_drht7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.5, -7.2838)
scale = Vector2(1.0625, 1.04054)
texture = ExtResource("2_o1ys2")
region_enabled = true
region_rect = Rect2(112, 80, 16, 32)

[connection signal="area_entered" from="Player_Detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="Player_Detector" to="." method="_on_detector_area_exited"]
[connection signal="body_entered" from="Player_Detector" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Player_Detector" to="." method="_on_detector_body_exited"]
[connection signal="area_entered" from="Rock_Detector" to="." method="_on_detector_area_entered_rock"]
[connection signal="area_exited" from="Rock_Detector" to="." method="_on_detector_area_exited_rock"]
[connection signal="body_entered" from="Rock_Detector" to="." method="_on_area_2d_body_entered_rock"]
[connection signal="body_exited" from="Rock_Detector" to="." method="_on_detector_body_exited_rock"]
